# code-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
coding_agent/: __init__.py  agent.py  cli.py  config.py  context.py  ignore.py  instructions.py  model_client.py  patch.py  path_safety.py  prompts.py  ranking.py  reader.py  search.py  tools.py  types.py
docs/: implementation-plan.md  m1-learning-and-interview.md  m2-implementation-guide.md  m3-implementation-guide.md  m4-implementation-guide.md  m5-implementation-guide.md  m6-implementation-guide.md
editors/vscode/: README.md  argv.js  extension.js  package.json
editors/vscode/test/: argv.test.js
src/coding_agent/: __init__.py  agent.py  approvals.py  cli.py  config.py  context.py  explanations.py  ignore.py  instructions.py  model_client.py  patch.py  path_safety.py  plans.py  prompts.py  ranking.py  reader.py  reviews.py  search.py  task_modes.py  tool_outputs.py  tool_policy.py  tools.py  types.py  ui.py  verification.py
src/coding_agent/security/: __init__.py  command_policy.py  docker_backend.py  models.py  path_policy.py  process_runner.py  sandbox.py  snapshot.py
src/coding_agent/sessions/: __init__.py  codec.py  models.py  privacy.py  query.py  recovery.py  reducer.py  replay.py  store.py  workspace_guard.py
tests/: process_fakes.py  test_agent.py  test_agent_resume.py  test_agent_sessions.py  test_agent_verification.py  test_approval_audit.py  test_cli.py  test_cli_product.py  test_cli_security.py  test_cli_sessions.py  test_command_policy.py  test_context.py  test_docker_backend.py  test_docker_sandbox_smoke.py  test_explain_mode.py  test_ignore.py  test_instructions.py  test_integration.py  test_m2_integration.py  test_m3_acceptance.py  test_m3_integration.py  test_m4_acceptance.py  test_m4_integration.py  test_m5_acceptance.py  test_m5_integration.py  test_m6_acceptance.py  test_m6_integration.py  test_m6_step10.py  test_m6_step11.py  test_m6_step12.py  test_m6_step13.py  test_m6_step14.py  test_m6_step15.py  test_m6_step6.py  test_m6_step7.py  test_m6_step8.py  test_m6_step9.py  test_model_streaming.py  test_output_summary.py  test_patch.py  (+26 more)
tests/fixtures/failing_project/: calculator.py  test_calculator.py.txt
tests/fixtures/m3_python_project/: AGENTS.md  pyproject.toml
tests/fixtures/m3_python_project/src/: refund_service.py
tests/fixtures/m3_python_project/tests/: test_refund_service.py.txt
tests/fixtures/m3_typescript_project/: package.json  tsconfig.json
tests/fixtures/m3_typescript_project/src/: refund.ts
tests/fixtures/m3_typescript_project/tests/: refund.test.ts.txt
