[project]
name = "coding-agent"
version = "0.3.0"
description = "A local AI coding agent CLI inspired by Codex, implemented primarily in Python."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "coding-agent contributors" }
]
dependencies = [
  "openai>=2.0.0,<3.0.0",
  "pathspec>=0.12.0,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<10.0.0"
]

[project.scripts]
coding-agent = "coding_agent.cli:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["coding_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "local_rg: optional smoke test that uses the locally installed ripgrep binary",
  "local_node: optional smoke test that uses the locally installed Node.js runtime"
]
